--- a/workspace/TiendaChepito/pom.xml
+++ b/workspace/TiendaChepito/pom.xml
@@ -15,6 +15,8 @@
 	<description>Aplicación que contiene todos los servicios de negocio expuestos para los clientes que consumen las APIs de la Tienda Chepito</description>
 	<properties>
 		<java.version>21</java.version>
+		<sonar.organization>juliang08</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
